--- a/webserver/tasks/main.yml
+++ b/webserver/tasks/main.yml
@@ -14,7 +14,7 @@
 - name: clone a repo
   become: true
   ansible.builtin.git:
-    repo: https://github.com/rxneyo/tooling.git
+    repo: https://github.com/darey-io/tooling.git
     dest: /var/www/html
     force: yes
 
