--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -30,6 +30,16 @@
 # Vhost configuration.
 - import_tasks: vhosts.yml
 
+- name: set webservers host name in /etc/hosts
+  become: yes
+  blockinfile: 
+    path: /etc/hosts
+    block: |
+      {{ item.ip }} {{ item.name }}
+  loop:
+    - { name: web1, ip: 172.31.37.122 }
+    - { name: web2, ip: 172.31.33.13 }
+
 # Nginx setup.
 - name: Copy nginx configuration in place.
   become: true
