--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -1,17 +1,19 @@
 ---
 - hosts: all
-- name: Include dynamic variables 
+  name: Include dynamic variables
   tasks:
-  import_playbook: ../static-assignments/common.yml 
-  include: ../dynamic-assignments/env-vars.yml
+    - import_playbook: ../static-assignments/common.yml
+    - include: ../dynamic-assignments/env-vars.yml
   tags:
     - always
 
--  hosts: webservers
-- name: Webserver assignment
-  import_playbook: ../static-assignments/webservers.yml
+- hosts: webservers
+  name: Webserver assignment
+  tasks:
+    - import_playbook: ../static-assignments/webservers.yml
 
-     - name: Loadbalancers assignment
-       hosts: lb
-         - import_playbook: ../static-assignments/loadbalancers.yml
-        when: load_balancer_is_required 
+- hosts: lb
+  name: Loadbalancers assignment
+  tasks:
+    - import_playbook: ../static-assignments/loadbalancers.yml
+  when: load_balancer_is_required
