--- a/static-assignments/common.yml
+++ b/static-assignments/common.yml
@@ -1,5 +1,5 @@
 ---
-- name: Update web and NFS servers
+- name: update web, nfs and db servers
   hosts: webservers:nfs
   remote_user: ec2-user
   become: yes
