--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -1,19 +1,46 @@
 ---
-- hosts: all
-  name: Include dynamic variables
-  tasks:
-    - include: ../static-assignments/common.yml
-    - include_vars: ../dynamic-assignments/env-vars.yml
-  tags:
-    - always
 
-- hosts: webservers
-  name: Webserver assignment
-  tasks:
-    - include: ../static-assignments/webservers.yml
+- name: Include dynamic variables
 
-- hosts: lb
-  name: Loadbalancers assignment
-  tasks:
-    - include: ../static-assignments/loadbalancers.yml
+  hosts: uat-webservers
+
+ 
+
+# - name: import common file
+
+#   import_playbook: ../static-assignments/common.yml
+
+#   tags:
+
+#     - always
+
+ 
+
+# - name: include env-vars file
+
+#   import_playbook: ../dynamic-assignments/env-vars.yml
+
+#   tags:
+
+#     - always
+
+ 
+
+# - name: import database file
+
+#   import_playbook: ../static-assignments/database.yml
+
+ 
+
+# - name: import webservers file
+
+#   import_playbook: ../static-assignments/uat-webservers.yml
+
+ 
+
+- name: import Loadbalancers assignment
+
+  import_playbook: ../static-assignments/loadbalancers.yml
+
   when: load_balancer_is_required
+
