--- a/roles/nginx/defaults/main.yml
+++ b/roles/nginx/defaults/main.yml
@@ -78,15 +78,16 @@ nginx_vhosts: []
 #   template: "" # Can be used to override the `nginx_vhost_template` per host.
 #   state: "absent" # To remove the vhost configuration.
 
-nginx_upstreams: 
- - name: myapp1
-   strategy: "ip_hash" # "least_conn", etc.
-   keepalive: 16 # optional
-    servers: {
-     "web1 weight=3",
-     "web2 weight=3",
-     "proxy_pass http://myapp1"
-    }
+nginx_upstreams:
+  - name: myapp1
+    strategy: "ip_hash" # "least_conn", etc.
+    keepalive: 16 # optional
+    servers:
+      - "web1 172.31.37.122"
+      - "web2 172.31.33.13"
+    proxy_pass: "http://myapp1"
+
+    
 
 nginx_log_format: |-
   '$remote_addr - $remote_user [$time_local] "$request" '
