--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -1,21 +1,45 @@
- pipeline {
+pipeline {
     agent any
 
-  stages {
-    stage('Build') {
-      steps {
-        script {
-          sh 'echo "Building Stage"'
+    stages {
+        stage('Build') {
+            steps {
+                script {
+                    sh 'echo "Building Stage"'
+                }
+            }
         }
-      }
-    }
 
-    stage('Test') {
-      steps {
-        script {
-          sh 'echo "Testing Stage"'
+        stage('Test') {
+            steps {
+                script {
+                    sh 'echo "Testing Stage"'
+                }
+            }
         }
-      }
-    }
+
+        stage('Package') {
+            steps {
+                script {
+                    sh 'echo "Packaging Stage"'
+                }
+            }
+        }
+
+        stage('Deploy') {
+            steps {
+                script {
+                    sh 'echo "Deploying Stage"'
+                }
+            }
+        }
+
+        stage('Clean up') {
+            steps {
+                script {
+                    sh 'echo "Cleaning up Stage"'
+                }
+            }
+        }
     }
 }
