Jenkins file update

--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -1,5 +1,10 @@
 pipeline {
-  agent any
+    agent any
+
+    parameters {
+      string(name: 'inventory', defaultValue: 'dev',  description: 'This is the inventory file for the environment to deploy configuration')
+    }
+...
 
   environment {
       ANSIBLE_CONFIG="${WORKSPACE}/deploy/.ansible.cfg"
@@ -29,7 +34,7 @@ pipeline {
 
       stage('Run Ansible playbook') {
         steps {
-           ansiblePlaybook become: true, colorized: true, credentialsId: 'sshkey', disableHostKeyChecking: true, installation: 'ansible2', inventory: 'inventory/dev.yml', playbook: 'playbooks/site.yml'
+           ansiblePlaybook become: true, colorized: true, credentialsId: 'sshkey', disableHostKeyChecking: true, installation: 'ansible2', inventory: '${inventory}', playbook: 'playbooks/site.yml'
          }
       }
 
