--- a/deploy/.ansible.cfg
+++ b/deploy/.ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 timeout = 160
-roles_path = /home/ubuntu/ansible-config-mgt/static-assignments/artifactory.yml
+# roles_path = /home/ubuntu/ansible-config-mgt
 callback_whitelist = profile_tasks
 log_path=~/ansible.log
 host_key_checking = False
