--- a/roles/artifactory/tasks/main.yml
+++ b/roles/artifactory/tasks/main.yml
@@ -1,2 +1,52 @@
 ---
 # tasks file for artifactory
+---
+# defaults file for artifactory
+
+- name: Install Java 11
+  ansible.builtin.yum:
+    name: java-11-openjdk-devel
+    state: present
+
+- name: Install Required Packages
+  ansible.builtin.yum:
+    name:
+      - wget
+      - unzip
+    state: present
+
+- name: Configure Java Path
+  ansible.builtin.template:
+    src: templates/bash-profile.j2  # Ensure this template exists
+    dest: ~/.bash_profile
+
+- name: Reload the /etc/profile
+  command: source ~/.bash_profile
+
+- name: Add Repository Key to Repos List
+  ansible.builtin.get_url:
+    url: https://releases.jfrog.io/artifactory/artifactory-rpms/artifactory-rpms.repo
+    dest: /home/ec2-user/jfrog-artifactory-rpms.repo
+    mode: '0755'
+
+- name: Copy the Downloaded File to /etc/yum.repos.d
+  ansible.builtin.copy:
+    src: /home/ec2-user/jfrog-artifactory-rpms.repo
+    dest: /etc/yum.repos.d/jfrog-artifactory-rpms.repo
+    remote_src: yes
+    follow: yes
+
+- name: Update Cache
+  ansible.builtin.yum:
+    update_cache: yes
+
+- name: Install Artifactory
+  ansible.builtin.yum:
+    name: jfrog-artifactory-oss
+    state: present
+
+- name: Start and Enable Artifactory Service
+  ansible.builtin.service:
+    name: artifactory
+    state: started
+    enabled: yes
