--- a/roles/artifactory/tasks/main.yml
+++ b/roles/artifactory/tasks/main.yml
@@ -1,8 +1,4 @@
 ---
-# tasks file for artifactory
----
-# tasks file for artifactory
-
 - name: Install Java 11
   ansible.builtin.yum:
     name: java-11-openjdk-devel
@@ -21,22 +17,22 @@
     dest: ~/.bash_profile
 
 - name: Reload the /etc/profile
-  command: source ~/.bash_profile
+  shell: source ~/.bash_profile
 
-- name: Add Repository Key to Repos List
+- name: Add the Repository Key to Repos List
   ansible.builtin.get_url:
     url: https://releases.jfrog.io/artifactory/artifactory-rpms/artifactory-rpms.repo
-    dest: /home/ec2-user/jfrog-artifactory-rpms.repo
+    dest: /etc/yum.repos.d/jfrog-artifactory-rpms.repo
     mode: '0755'
 
-- name: Copy the Downloaded File to /etc/yum.repos.d
+- name: Copy the Downloaded File to the etc Repo
   ansible.builtin.copy:
     src: /home/ec2-user/jfrog-artifactory-rpms.repo
     dest: /etc/yum.repos.d/jfrog-artifactory-rpms.repo
     remote_src: yes
     follow: yes
 
-- name: Update Cache
+- name: Update Package Cache
   ansible.builtin.yum:
     update_cache: yes
 
@@ -45,7 +41,7 @@
     name: jfrog-artifactory-oss
     state: present
 
-- name: Start and Enable Artifactory Service
+- name: Start and Enable Artifactory
   ansible.builtin.service:
     name: artifactory
     state: started
