--- a/inventory/ci.yml
+++ b/inventory/ci.yml
@@ -1,14 +1,14 @@
 [jenkins]
-<Jenkins-Private-IP-Address>
+Jenkins-Private-IP-Address
 
 [nginx]
-<Nginx-Private-IP-Address>
+Nginx-Private-IP-Address
 
 [sonarqube]
-<Sonarqube-Private-IP-Address>
+Sonarqube-Private-IP-Address
 
 [artifactory-repository]
 172.31.84.101 ansible_ssh_user='ec2-user'
 
 [db]
-172.31.33.109 ansible_ssh_user='ubuntu' 
+172.31.33.109 ansible_ssh_user='ubuntu'
