--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -25,12 +25,14 @@
 # #     - always
 
  
-
+---
+- hosts: db
 - name: import database file
 
   import_playbook: ../static-assignments/database.yml
   
 
+- hosts: artifactory
 - name: Import Artifactory Playbook
 
   import_playbook: ../static-assignments/artifactory.yml
