--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
 
 
   environment {
-      ANSIBLE_CONFIG="${WORKSPACE}/deploy/.ansible.cfg"
+      ANSIBLE_CONFIG="${WORKSPACE}/deploy/ansible.cfg"
     }
 
   stages {
