--- a/deploy/ansible.cfg
+++ b/deploy/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 timeout = 160
 # roles_path = /home/ec2-user/ansible-config-mgt/roles
-callback_whitelist = profile_tasks
+# callback_whitelist = profile_tasks
 log_path=~/ansible.log
 host_key_checking = False
 gathering = smart
