--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -34,7 +34,7 @@ pipeline {
 
       stage('Run Ansible playbook') {
         steps {
-           ansiblePlaybook become: true, colorized: true, credentialsId: 'sshkey', disableHostKeyChecking: true, installation: 'ansible2', inventory: 'inventory${inventory}', playbook: 'playbooks/site.yml'
+           ansiblePlaybook become: true, colorized: true, credentialsId: 'sshkey', disableHostKeyChecking: true, installation: 'ansible', inventory: 'inventory${inventory}', playbook: 'playbooks/site.yml'
          }
       }
 
