--- a/roles/mysql/defaults/main.yml
+++ b/roles/mysql/defaults/main.yml
@@ -127,7 +127,7 @@ mysql_users:
 
 mysql_users:
   - name: homestead
-    host: 172.31.83.62
+    host: 172.31.80.0/20
     password: sePret^i
     priv: '*.*:ALL,GRANT'
 
