--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -1,8 +1,8 @@
 pipeline {
     agent any
 
-    parameters {
-      string(name: 'inventory', defaultValue: 'ci',  description: 'This is the inventory file for the environment to deploy configuration')
+  parameters {
+      string(name: 'inventory', defaultValue: 'dev',  description: 'This is the inventory file for the environment to deploy configuration')
     }
 
 
@@ -34,7 +34,7 @@ pipeline {
 
       stage('Run Ansible playbook') {
         steps {
-           ansiblePlaybook become: true, colorized: true, credentialsId: 'sshkey', disableHostKeyChecking: true, installation: 'ansible', inventory: 'inventory/${inventory}', playbook: 'playbooks/site.yml'
+           ansiblePlaybook become: true, colorized: true, credentialsId: 'key-pair', disableHostKeyChecking: true, installation: 'ansible', inventory: 'inventory/dev', playbook: 'playbooks/site.yml'
          }
       }
 
