--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -1,62 +1,68 @@
-# ---
+# # ---
 
-# # - name: Include dynamic variables
+# # # - name: Include dynamic variables
 
-# #   hosts: uat-webservers
+# # #   hosts: uat-webservers
 
  
 
-# # # - name: import common file
+# # # # - name: import common file
 
-# # #   import_playbook: ../static-assignments/common.yml
+# # # #   import_playbook: ../static-assignments/common.yml
+
+# # - hosts: todo
+# # - name: Deploy the todo application
+# #   ansible.builtin.import_playbook: ../static-assignments/php.yml
+# # # #   tags:
+
+# # # #     - always
+
+ 
+
+# # # - name: include env-vars file
+
+# # #   import_playbook: ../dynamic-assignments/env-vars.yml
 
 # # #   tags:
 
 # # #     - always
 
  
+# # - hosts: db
+# # - name: import database file
 
-# # - name: include env-vars file
-
-# #   import_playbook: ../dynamic-assignments/env-vars.yml
-
-# #   tags:
-
-# #     - always
-
- 
-# - hosts: db
-# - name: import database file
-
-#   import_playbook: ../static-assignments/database.yml
+# #   import_playbook: ../static-assignments/database.yml
   
 
+# # - hosts: artifactory
+# # - name: Import Artifactory Playbook
+
+# #   import_playbook: ../static-assignments/artifactory.yml
+
+ 
+
+# # # # - name: import webservers file
+
+# # # #   import_playbook: ../static-assignments/uat-webservers.yml
+
+ 
+
+# # # - name: import Loadbalancers assignment
+
+# # #   import_playbook: ../static-assignments/loadbalancers.yml
+
+# # #   when: load_balancer_is_required
+
+
+# ---
+# - hosts: db
+# - name: database assignment
+#   ansible.builtin.import_playbook: ../static-assignments/database.yml
+ 
+- hosts: nginx
+- name: nginx assignment
+  ansible.builtin.import_playbook: ../static-assignments/uat-webservers.yml
+ 
 # - hosts: artifactory
-# - name: Import Artifactory Playbook
-
-#   import_playbook: ../static-assignments/artifactory.yml
-
- 
-
-# # # - name: import webservers file
-
-# # #   import_playbook: ../static-assignments/uat-webservers.yml
-
- 
-
-# # - name: import Loadbalancers assignment
-
-# #   import_playbook: ../static-assignments/loadbalancers.yml
-
-# #   when: load_balancer_is_required
-
-
----
-- hosts: db
-- name: database assignment
-  ansible.builtin.import_playbook: ../static-assignments/database.yml
- 
-
-- hosts: artifactory
-- name: artifactory assignment
-  ansible.builtin.import_playbook: ../static-assignments/artifactory.yml
+# - name: artifactory assignment
+#   ansible.builtin.import_playbook: ../static-assignments/artifactory.yml
