--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -33,9 +33,9 @@ pipeline {
      }
 
       stage('Run Ansible playbook') {
-  steps {
-    ansiblePlaybook become: true, colorized: true, credentialsId: 'key-pair', disableHostKeyChecking: true, installation: 'ansible', inventory: 'inventory/dev', playbook: 'playbooks/site.yml', ansibleName: 'ansible', executable: '/usr/bin/ansible-playbook'
-  }
+    steps {
+        ansiblePlaybook become: true, colorized: true, credentialsId: 'key-pair', disableHostKeyChecking: true, installation: 'ansible', inventory: 'inventory/dev', playbook: 'playbooks/site.yml'
+    }
 }
 
 
