--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -36,10 +36,13 @@ pipeline {
     steps {
         script {
             def ansibleExecutable = "/usr/bin/ansible/ansible-playbook"
-            sh "${ansibleExecutable} playbooks/site.yml -i inventory/dev -b --become-user root --private-key /var/lib/jenkins/workspace/ansible-config-mgt_main/ssh39098367711967853.key -u ec2-user"
+            withEnv(["PATH+ANSIBLE=${ansibleExecutable}"]) {
+                sh "ansible-playbook playbooks/site.yml -i inventory/dev -b --become-user root --private-key /var/lib/jenkins/workspace/ansible-config-mgt_main/ssh39098367711967853.key -u ec2-user"
+            }
         }
     }
 }
+
 
 
 
